ChangeLog for the Astro project.

20200824:
	* fix a problem with the QSI library that results from the use of
	  double for exposure time in the QSI library and float in this project
	* fix a problem with the computation of the noise distribution in
	  the simulator driver

20200822:
	* add quality to exposure in CCD, simulator, qsi, tasks (task table
	  needs to be upgraded)
	* fix some bugs in noise model of simulator
	* fix a bug in FITS.cpp

20200821:
	* introduce StarTile for lightweight stars
	* fix SimMount movement logic
	* fix locking error in SimFilterwheel

20200820:
	* add great circle path for simulated mount
	* portability fix in snowfocuser
	* add snowfocuser client program
	* complete callback implementation in FocuserI.cpp
	* add the astrofocuser program
	* rework the othello focuser driver, add monitoring thread
	* allow for older libusb in USBContextHolder.cpp

20200819:
	* protect Callback from races
	* make SimCooler start only when it is actually requested
	* fix missing includes in astrotime and astrofocus

20200818:
	* add monitoring thread to AtikCooler, stop to AtikCcd
	* fix threads in QHY driver
	* fix threads in simulator driver
	* fix threads in Asi driver
	* fix thread interface in Sx, ensure threads are terminated
	* moved some thread start functions to class scope
	* reworked QSI driver
	* fixed shutdown sequence in QSI driver (proper thread termination 
	  in dependent classes)
	* fix snowccd client help message
	* fix snowfilterwheel client syntax

20200817:
	* fix warning in debug.cpp
	* fix warning in GridCalculator.cpp
	* fix warning in URL.cpp
	* fix warning in FITS.cpp
	* fix warning in ImageBuffer.cpp
	* fix warning in ImageDirectory.cpp
	* fix initialization warnings in VectorField.cpp
	* fix using readdir_r in Properties.cpp
	* fix warnings in ParameterDescription.cpp
	* fix warnings in ModuleRepository.cpp
	* fix warnings in ImageRepo.cpp
	* fix warnings in Catalog.cpp
 	* fix warnings in BSC.cpp